testcases/negative/malformed_property_no_colon.vcf
BEGIN:VCARD
VERSION:4.0
FN:John Doe
TEL+1-555-1234
END:VCARD
